Fix word wrap in tables

--- a/style/style-markdown.styl
+++ b/style/style-markdown.styl
@@ -19,7 +19,8 @@
 
 /* Code */
 #content .markdown pre, #content .markdown code {
-    font-family: "Input Mono Nar Reg", monospace; border-radius: 3px; white-space: pre-wrap; word-wrap: break-word;
+    font-family: "Input Mono Nar Reg", monospace; border-radius: 3px;
+    white-space: pre-wrap; word-wrap: break-word; word-break: break-all;
     background: #EAE6E4 !important;
     padding: 3px 4px !important;
     margin: 0;
@@ -43,13 +44,12 @@
 .markdown ol { list-style: decimal; }
 
 /* Tables */
-.markdown .table { overflow-y: hidden; overflow-x: auto; padding: 0 2px; } /* Responsive Tables: <div class="table"><table>...</table></div> */
+.markdown .table { overflow-y: hidden; overflow-x: auto; padding: 0 2px; word-break: break-all; } /* Responsive Tables: <div class="table"><table>...</table></div> */
 .markdown table { border-collapse: collapse; min-width: 100%; }
 .markdown table td, .markdown table th { border: 3px solid #EAE6E4; padding: 6px; text-align: left; }
 .markdown table tbody tr:nth-child(even) td { background: #f5f3f2; }
 .markdown table th { background: #EAE6E4; }
 .markdown table caption { text-align: left; caption-side: bottom; }
-.markdown code { white-space: pre-wrap; word-wrap: break-word; }
 
 /* Report Form */
 .markdown input, .markdown textarea
